daemon_error.txt
    Checking dsl v0.1.0 (C:\Users\hayate\projects\phybkc\crates\dsl)
error[E0733]: recursion in an async fn requires boxing
  --> crates\dsl\src\executor.rs:53:5
   |
53 |     pub async fn execute_statement(&self, stmt: &Statement) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
66 |                             self.execute_statement(f).await;
   |                             ------------------------------- recursive call here
   |
   = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

For more information about this error, try `rustc --explain E0733`.
error: could not compile `dsl` (lib) due to 1 previous error
